Add property writes for class instance objects.